perf(benchmarks): measure spot mixed workload